<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/settings_menu_auto_update"
        android:key="pref_key_auto_update">
        <CheckBoxPreference
            android:key="pref_key_auto_update_enable"
            android:summary="@string/settings_menu_auto_update_enable_hint"
            android:title="@string/settings_menu_auto_update_enable"
            android:defaultValue="false"/>
        <EditTextPreference 
            android:key="pref_key_auto_update_time"
            android:summary="@string/settings_menu_auto_update_time_hint"
            android:title="@string/settings_menu_auto_update_time"
            android:defaultValue="5"/>
    </PreferenceCategory>

</PreferenceScreen>
